Fixed minor spelling mistake

--- a/kardium.html
+++ b/kardium.html
@@ -110,9 +110,9 @@
                 </div>
                 <div class="project-quotes">
                     <h4>"How might we <span>standardize our design library to streamline development process, reduce the visual "junk" for physicians</span> while allowing for future improvement and features?"</h4>
-                    <p>— Kardium Senior UX Manager</p>
+                    <p>— Senior UX Manager</p>
                     <h4>"While I could <span>make a judgment call based on the (current spec) guidelines, I think it would be better for UI/UX to make the final decision</span>—ideally with a mockup (standard) to guide implementation"</h4>
-                    <p>— Kardium Staff UI Software Developer</p>
+                    <p>— Staff UI Software Developer</p>
                 </div>
             </section>
 
@@ -120,7 +120,7 @@
                 <div class="text-container">
                     <h2>A flexible design system for for both</h2>
                     <h3>Conducting Design Audits</h3>
-                    <p>Starting in June, I took on the responsibility of managing our design library, with the first steping being to conduct design audits of Kardium’s current Figma asset library and software implementations of different dialog boxes and other design elements. From this I synthesized the common design patterns, what was working well and areas that needed improvement, as well as <span>discovering the differences between the design mock up specs that the UX team were creating versus the software implementation</span> by the UI developers.</p>
+                    <p>Starting in June, I took on the responsibility of managing our design library, with the first step  being to conduct design audits of Kardium’s current Figma asset library and software implementations of different dialog boxes and other design elements. From this I synthesized the common design patterns, what was working well and areas that needed improvement, as well as <span>discovering the differences between the design mock up specs that the UX team were creating versus the software implementation</span> by the UI developers.</p>
                     <p>The audit process also involved 1:1 meetings with UX Designers, as well as meeting with UI developers from the development team to understand the process and workflow in implementing a feature after receiving the mockup specs from the UX Design team.</p>
                 </div>
                 <figure class="figure-analysis project-img static-img" >
@@ -145,7 +145,9 @@
                 <div class="grid two-col-project-grid align-top">
                     <div class="text-container">
                         <h3>Rebuilding from the atoms up</h3>
-                        <p>To unify the design system across both Product UX and the development team, <span>I collaborated with our Senior UX Manager and a Staff Software Engineer to start refactoring our UX design library from the atom level</span> in form of fonts, matching the UX’s library to the list of different font sizes and naming scheme in the software provided by developers’ team and from there, working my way up the design system, updating the buttons (molecule), dialog sections (organism) and ending with template/page in the form of a sample UI frame with all the elements from the design system.</p>
+                        <p>To unify the design system across both Product UX and the development team, <span>I collaborated with our Senior UX Manager and a Staff Software Engineer to start refactoring our UX design library from the atom level</span> in form of fonts, matching the UX’s library to the list of different font sizes and naming scheme in the software provided by developers’ team and from there, working my way up, updating the buttons (molecule), dialog sections (organism) and ending with template/page in the form of a sample UI frame with all the elements from the design system.</p>
+
+                        <p>In this process, I also ensure a transparent and clear communication channel between UX and development through having weekly meetings as well as updating them on the different changes in the new design standards</p>
                     </div>
                     <figure class="figure-analysis project-img static-img" >
                         <img alt="Meeting with Development" class="lazy js-off" src="img\kardium\Dev_100.webp"
@@ -208,31 +210,6 @@
                         <figcaption class="caption-analysis">Kardium Design System on Figma</figcaption>
                     </figure>
             </section>
-
-            <!-- <section class="project-analysis">
-                <div class="grid two-col-project-grid add-gutters align-top">
-                    <div class="text-container">
-                        <h3>Design component management</h3>
-                        <p>Starting in June, I took on the responsibility of managing our design system. This involved creating new components as well updating exsting ones to ensure the design system is always up to date. In addition, this also involved benchmarking with competitors systems, and ensuring consistency with existing company guidelines and WCAG accessibility standards. The role required strong task management, clear communication with both designers requesting the icons and developers implementing them, and a solid understanding of icon design guidelines and library management.</p>
-                    </div>
-                    <figure class="figure-analysis project-img static-img" >
-                        <img alt="Persona image of Natalie (Intended User)" class="lazy js-off" src="img\fureverhome\PersonaN_100.webp"
-                        data-src="img\fureverhome\PersonaN_400.webp"
-                        data-srcset="img\fureverhome\PersonaN_400.webp 400w,
-                                    img\fureverhome\PersonaN_800.webp 600w,
-                                    img\fureverhome\PersonaN_1080.webp 1080w"
-                        data-sizes="100w">
-                        <noscript>
-                            <img src="img\fureverhome\PersonaN_100.webp" alt="Persona image of Natalie (Intended User)"
-                            srcset="img\fureverhome\PersonaN_400.webp 400w,
-                                    img\fureverhome\PersonaN_800.webp 600w,
-                                    img\fureverhome\PersonaN_1080.webp 1080w" 
-                            sizes="(min-width: 74rem) 50vw, 100vw">
-                        </noscript>
-                        <figcaption class="caption-analysis">Persona of Natalie (Intended User)</figcaption>
-                    </figure>  
-                </div>
-            </section> -->
 
             <section class="project-analysis grid two-col-project-grid">
                 <div class="text-container">
