added credit for dev photo

--- a/kardium.html
+++ b/kardium.html
@@ -163,7 +163,7 @@
                                         img\kardium\Dev_1080.webp 1080w" 
                                 sizes="(min-width: 74rem) 50vw, 100vw">
                         </noscript>
-                        <figcaption class="caption-analysis">Meeting with UI developers</figcaption>
+                        <figcaption class="caption-analysis">Meeting with UI developers (credit profile illustration from irasutoya)</figcaption>
                     </figure>   
                 </div>
                 
