Minor shortening text for case study per alex feedback

--- a/88rising.html
+++ b/88rising.html
@@ -90,11 +90,11 @@
             <section class="project-analysis" id="overview">
                 <div class="text-container">
                     <h2>Setting The Stage</h2>
-                    <p>Elevating artists like Joji, Rich Brian and NIKI into modern pop culture, 88rising is a multi-media record label that aims to create a platform for Asian and Asian-American talents, bridging the gap between the East and the West. They have quickly became a cultural phenomenon, gaining over 3 billion views within 3 years on YouTube.</p>
+                    <p>88rising is a multi-media record label that aims to create a platform for Asian and Asian-American talents, bridging the gap between the East and the West. They have quickly became a cultural phenomenon, gaining over 3 billion views within 3 years on YouTube.</p>
 
                     <p>However, 88rising has since <span>faced issues with discoverability. Within the past 4 years, they’ve only accumulated 0.43 billion views</span> on YouTube and have struggled with providing their new artists with the same reach that they formerly had.</p>
                     
-                    <p>During this 7 weeks long project, I <span>led the user research</span>, as well as contributed to the design of the different interactions, content strategy while also being the <span>decision maker</span> during our design sprints.</p>
+                    <p>During this 6 weeks long project, I <span>led the user research</span>, as well as contributed as a <span>interaction designer</span> while also being the <span>decision maker</span> during our design sprints.</p>
                     <a href="88rising.html#solution" class="label-button" id="solution-button">Jump to proposed intervention ↓</a>
                 </div>
             </section>
@@ -130,8 +130,8 @@
                 <div class="text-container">
                     <h2>User Research</h2>
                     <h3>The root of the issue</h3>
-                    <p>At the beginning of the project the team researched online for secondary data in combination with user interviews and surveys, where <span>I interviewed 89 participants</span> (1 over 88!!), ranging from casual to die-hard fans regarding their music-sharing habits, and their perception of 88rising and its artist roster.</p>
-                    <p>These interviews pointed to a lack of awareness within the fanbase of 88rising’s frequent releases with <span>62% of respondents not aware of their monthly releases.</span> Another question that was brought up during the survey was if they agree that 88rising is declining in popularity, to which the majority of the survey respondents agreed. However, when asked the reason why, <span>41% of our casual fans respondents attributed it to the lack of engagement</span> from the brand themselves, despite having an interest in 88rising’s new talents and their signature sounds.</p>
+                    <p>To better understand 88rising's audience the team conducted<span>15 user interviews</span> and received <span>89 responded </span> to an online survey asking casual to die-hard fans regarding their music-sharing habits, and their perception of 88rising and its artist roster.</p>
+                    <p>These interviews pointed to a lack of awareness within the fanbase of 88rising’s frequent releases which leads to their decline in popularity with <span>62% of respondents not aware of their monthly releases and 41% of fans respondents attributed the decline due to the lack of engagement</span> from the brand themselves, despite having an interest in 88rising’s new talents and their signature sounds.</p>
                 </div>
                 <div class="project-quotes">
                     <h4>"It feels like the <span>big names are stagnant while majority of the new artist are spread thin </span> or not enough exposure."</h4>
@@ -217,8 +217,8 @@
 
                 <div class="text-container">
                     <h3>88rising Wesbite</h3>
-                    <p>Additionally, 88rising’s current website only <span>focuses on merchandise sales, lacking any clarity on their current roster of artists</span>, what the brand is about, and any information about the personalities surrounding the brand. This makes it even harder for fans to truly jump down the rabbit hole and learn more about their favorite artists and discover upcoming ones as well.</p>
-                    </div>
+                    <p>Additionally, 88rising’s current website only <span>focuses on merchandise sales, lacking any clarity on their current roster of artists</span>, what the brand is about, and any information about the personalities surrounding the brand.</p>
+                </div>
             </section>
 
             <section class="project-analysis">
@@ -268,7 +268,7 @@
             <section class="project-analysis grid two-col-project-grid add-gutters align-top" id="solution">
                 <div class="text-container">
                     <h2>Result</h2>
-                    <p><span>This intervention invites both fans and visitors to explore 88rising as a whole and delve deeper into artists they may not have heard of previously.</span> Throughout the site, fans can watch and listen to different collaborations and stories from artists, revealing the inspirations, cultural context, and symbolism of their songs while also giving fans a preview of who they are behind the screen. With user sharability and discoverbility in mind, our proposal aims to simplify discovery and support lesser-known artists from 88rising through establishing connections with the audience. View the pitch video <a href="https://youtu.be/11K5ityUOlY?si=2aMXECHxJAA_O-9W&t=14" class="in-text-link" target="_blank">here</a> if you're on mobile!</p>
+                    <p><span>This intervention invites both fans and visitors to explore 88rising as a whole and delve deeper into artists they may not have heard of previously.</span> Throughout the site, fans can watch and listen to different collaborations and stories from artists, revealing the inspirations, cultural context, and symbolism of their songs while also giving fans a preview of who they are behind the screen. View the pitch video <a href="https://youtu.be/11K5ityUOlY?si=2aMXECHxJAA_O-9W&t=14" class="in-text-link" target="_blank">here</a> if you're on mobile!</p>
                     <a href="https://www.figma.com/proto/aRfynDHRrGy4l6AnK5kR3P/88rising-Demo-Prototype?kind=proto&node-id=1-1603&page-id=0%3A1&scaling=scale-down&t=w2G7fgFCZoDXCAc6-1&type=design&viewport=2952%2C2231%2C0.17" class="label-button" target="_blank">Experience the interactive prototype here!</a>
                 </div>
                 <figure class="figure-analysis project-img">
@@ -414,9 +414,9 @@
             <section class="project-analysis">
                 <div class="text-container">
                     <h2>Reflection</h2>
-                    <p>Looking back, this was definitely the most challenging project I’ve been a part of and it was really an eye-opening experience, especially during my first-ever design sprint where I got the chance to be the team’s decision maker. I learned how to frame problems properly, make design decisions, and quickly generate and test those ideas. This rapid and hyper-focused process of iterating and feedback between user interviews and the teaching staff taught me to <span>truly not design in my head and to challenge every assumption I might have beforehand through research data.</span></p>
+                    <p>Looking back, this was definitely the most challenging project I’ve been a part of and it was really an eye-opening experience, especially during my first-ever design sprint where I got the chance to be the team’s decision maker. I <span>learned how to frame problems properly, make design decisions, and quickly generate and test those ideas.</span> This rapid and hyper-focused process of iterating and feedback between user interviews and the teaching staff taught me to <span>challenge every assumption I might have  through research data.</span></p>
 
-                    <p>Another crucial lesson that I learned the hard way is to truly <span>trust the process and let the problem space take shape as time goes on.</span> In the beginning, the team spent 3-4 weeks constantly doubting ourselves as we weren't able to lock in the "perfect" problem space rather than letting the framing develop as we research and gather more insights. This constant back and forth delayed the project until the final weeks of the project timeline.</p>
+                    <p>Another crucial lesson that I learned the hard way is to truly <span>trust the design process.</span> In the beginning, the team spent 3-4 weeks constantly doubting ourselves as we weren't able to lock in the "perfect" problem space rather than letting the framing develop as we research and gather more insights. This constant back and forth delayed the project until the final weeks of the project timeline.</p>
                 </div>
                 <figure class="project-img static-img figure-analysis">
                     <img alt="Research Insights" class="lazy js-off" src="img\88rising\figma_100.webp"
