--- a/fureverhome.html
+++ b/fureverhome.html
@@ -80,7 +80,7 @@
             <section class="project-analysis grid two-col-project-grid">
                 <div class="text-container">
                     <h3>The issue at hand</h3>
-                    <p>Approaching this project, my teammates and I first sought out research and journal articles, focusing on secondary research to familiarise ourselves with this domain and figure out if this is a domain we could potentially intervene and address with design. These articles pointed to resistance among potential and newly rescued dog owners with a survey done by Orvis and Spots noting <span>60% of adopted pets are returned or given away after 6 months, citing concerns about potential health risks and a lack of knowledge on how to effectively care for rescued pets.</span></p>
+                    <p>Approaching this project, my teammates and I first sought out research and journal articles to familiarise ourselves with this domain. These articles pointed to resistance among potential and newly rescued dog owners with a survey done by Orvis and Spots noting <span>60% of adopted pets are returned or given away after 6 months, citing concerns about potential health risks and a lack of knowledge on how to effectively care for rescued pets.</span></p>
                 </div>
                 <div class="project-quotes">
                     <h4>"42.8% of pet owners favors shelter or rescue adoption for the chance to give second chances, however, <span>without proper guidance and support, they may face challenges in ensuring successful and lasting adoptions</span>"</h4>
@@ -92,7 +92,7 @@
                 <div class="text-container">
                     <h2>Jumping down the rabbit hole</h2>
                     <h3>User Interviews</h3>
-                    <p>To gain a better understanding of how pet owners and pet shelters view their experience with rescued dogs and the difference between them and buying from breeders, we <span>conducted user interviews with 7 participants, each being 30 minutes long on both Zoom and in person</span>, with 4 people who adopted from breeders, 2 who adopted rescues and a volunteer from the SPCA, a local animal shelters.</p>
+                    <p>To gain a better understanding of how pet owners and pet shelters, the team <span>conducted user interviews with 7 participants on both Zoom and in person</span>, with 4 people who adopted from breeders, 2 who adopted rescues and a volunteer from the SPCA, a local animal shelters.</p>
                     <p>These interviews pointed to the general mindset of online information being sufficient but preferred hearing stories from experienced pet owners for specific insights. Common issues faced by pet owners include health, hygiene, and behavioral concerns with their pets, while common reasons for adopting pets include companionship, a love for animals, and a desire to practice caregiving.</p>
                 </div>
                 <div class="project-quotes">
@@ -107,7 +107,7 @@
                 <div class="grid two-col-project-grid add-gutters align-top">
                     <div class="text-container">
                         <h3>Persona and their journey</h3>
-                        <p>After discussing among the team and synthesizing all the insights we gather through our primary and secondary research, we created 3 different personas that represents the different potential users of the application. From that we also created a user journey map to help the team further understand the different touchpoints and emotions a newly rescued pet owner, who we identified as our primary user, might have to guide our design decisions in developing the application.</p>
+                        <p>Synthesizing all the insights we gather through our research, we created 3 different personas that represents the different potential users of the application. From that we also created a user journey map to help the team further understand the different touchpoints and emotions a newly rescued pet owner, who the team identified as the primary user, might have to guide our design decisions in developing the application.</p>
                     </div>
                     <figure class="figure-analysis project-img static-img" >
                         <img alt="Persona image of Natalie (Intended User)" class="lazy js-off" src="img\fureverhome\PersonaN_100.webp"
@@ -187,7 +187,7 @@
             <section class="project-analysis">
                 <div class="text-container">
                     <h3>Low to High Fidelity Wireframes</h3>
-                    <p>When wireframing the application in grey box form, as a team, we all took part in coming up with different designs and ideas. When it came time to fully flesh out the screens, we diverged with each person taking a different user flow and having a meeting after each day to discuss our progress and address encountered issues collaboratively. Here I was mainly in charge of wireframing and prototyping the secondary user flow for potential users while providing support and feedback for the primary and the volunteer flow.</p>
+                    <p>When wireframing the application in grey box form, as a team, we all took part in coming up with different designs and ideas. When it came time to fully flesh out the screens, we diverged with each person taking a different user flow and having a daily meeting to discuss our progress and address encountered issues collaboratively. <span>I was in charge of wireframing and prototyping</span> the potential user flow for while supporting my team for the primary and the volunteer flow.</p>
                 </div>
                 <div class="grid two-col-project-grid add-gutters">
                     <figure class="project-img static-img figure-analysis">
@@ -230,7 +230,7 @@
             <section class="project-analysis grid two-col-project-grid align-top">
                 <div class="text-container">
                     <h3>Competitive Analysis</h3>
-                    <p>When iterating on what how FurEverHome could differentiate itself, the team conducted a competitive analysis with each of us downloading a different dog app, using them for a week and then coming back as a team to discuss what they did well and what they are missing. One thing that we noticed while researching was that apart from encompassing a wider selection of features than other pet dog apps, FurEverHome truly stands out as the only application on the market (from our research) that focuses solely on rescue dogs.</p>
+                    <p>To better understand how FurEverHome could differentiate itself, the team conducted a competitive analysis across various popular dog pet app online. One thing that we noticed while researching was that apart from encompassing a wider selection of features than other pet dog apps, <span>FurEverHome truly stands out as the only application on the market that focuses solely on rescue dogs.</span></p>
                 </div>
                 <figure class="project-img static-img figure-analysis">
                     <img alt="Research Insights" class="lazy js-off" src="img\fureverhome\CompetitiveAnalysis_100.webp"
