--- a/kardium.html
+++ b/kardium.html
@@ -57,7 +57,7 @@
                         </div>
                         <div>
                             <h3>Timeline</h3>
-                            <p>Jul 2025 - Nov 2025</p>
+                            <p>Jun 2025 - Dec 2025</p>
                         </div>
                         <div>
                             <h3>Tools</h3>
@@ -76,11 +76,11 @@
                     <h2>Background</h2>
                     <p>The Globe Pulsed Field System, developped by Kardium, is a new tool that assist the treatment of atrial fibrillation (AFib), aiming to help more than 50 million people worldwide through making procedures more accurate and efficient.</p>
                     
-                    <p>My experience working at Kardium greatly expanded my capabilities as a designer. I was provided with the opportunity to learn, collaborate with various teams, and present to stakeholders and real world users weekly, elevating their visions into insights-driven features and product improvements.</p>
+                    <!-- <p>My experience working at Kardium greatly expanded my capabilities as a designer. I was provided with the opportunity to learn, collaborate with various teams, and present to stakeholders and real world users weekly, elevating their visions into insights-driven features and product improvements.</p> -->
 
                     <p>My primary role in this project involved conducting <span>design audits, ensuring accessibility compliance</span> with WCAG standards, managing the <span>design library</span>, and creating <span>guidelines for future development.</span></p>
 
-                    <p><span> NOTE: Due to NDA restrictions, this case study will only highlights the key tasks I contributed to creating standard guidelines for Kardium's design system at a high-level with contents replaced or left out.</span> If you'd like more details about my work, please feel free to <a href="mailto:lukedo2111@gmail.com" class="footer-link">contact me via my email!</a></p>
+                    <p><span> NOTE: Due to NDA restrictions, this case study will only highlights the key tasks I contributed to creating standard guidelines for Kardium's design system at a high-level with contents replaced or left out.</span> If you'd like more details about my work, please feel free to <a href="mailto:lukedo2111@gmail.com" class="in-text-link">contact me via my email!</a></p>
                 </div>
 
                 <figure class="figure-analysis project-img static-img" >
@@ -105,8 +105,8 @@
             <section class="project-analysis grid two-col-project-grid">
                 <div class="text-container">
                     <h2>The Challenge</h2>
-                    <p>With the Kardium’s first commercial cases happening in 2025, it was clear that Kardium's Globe Software will need to be as feature-packed as possible to compete with existing competitors in the market. To meet this growing scope, Kardium's product UX and development team had to focus on addressing various usuability issues and developping new market defining features.</p>
-                    <p>However, this rapid cycle of implementation meant inevitably creating an increasing divergence between the UX and development design libraries. Each team would rely on its own tools and naming conventions for different workflows, resulting in <span>inconsistencies, friction, and a design system that made collaboration difficult.</span> Even minor changes could take days to implement, <span>slowing both teams down and making iteration frustrating </span>given the nature of back and forth conversations.</p>
+                    <p>With the Kardium’s first commercial cases happening in 2025, it was clear that the Globe Software will need to be as feature-packed as possible to compete with existing competitors in the market.</p>
+                    <p>However, this rapid cycle of implementation meant inevitably creating an increasing divergence between the UX and development teams' design libraries. Each team would rely on its own tools and naming conventions for different workflows, resulting in <span>inconsistencies, friction, and a design system that made collaboration difficult.</span> Even minor changes could take days to implement, <span>slowing both teams down and making iteration frustrating </span>given the nature of back and forth conversations.</p>
                 </div>
                 <div class="project-quotes">
                     <h4>"How might we <span>standardize our design library to streamline development process, reduce the visual "junk" for physicians</span> while allowing for future improvement and features?"</h4>
@@ -120,7 +120,7 @@
                 <div class="text-container">
                     <h2>A flexible design system for for both</h2>
                     <h3>Conducting Design Audits</h3>
-                    <p>Starting in June, I took on the responsibility of managing our design library, with the first step  being to conduct design audits of Kardium’s current Figma asset library and software implementations of different dialog boxes and other design elements. From this I synthesized the common design patterns, what was working well and areas that needed improvement, as well as <span>discovering the differences between the design mock up specs that the UX team were creating versus the software implementation</span> by the UI developers.</p>
+                    <p>Starting in June, I took on the responsibility of managing our design library, with the first step being to conduct design audits of Kardium’s current Figma asset library and software implementations of different design elements such as dialog boxes. From this I synthesized the common design patterns, what was working well and areas that needed improvement, as well as <span>discovering the differences between the design mock up specs that the UX team were creating versus the software implementation</span> by the UI developers.</p>
                     <p>The audit process also involved 1:1 meetings with UX Designers, as well as meeting with UI developers from the development team to understand the process and workflow in implementing a feature after receiving the mockup specs from the UX Design team.</p>
                 </div>
                 <figure class="figure-analysis project-img static-img" >
@@ -145,9 +145,7 @@
                 <div class="grid two-col-project-grid align-top">
                     <div class="text-container">
                         <h3>Rebuilding from the atoms up</h3>
-                        <p>To unify the design system across both Product UX and the development team, <span>I collaborated with our Senior UX Manager and a Staff Software Engineer to start refactoring our UX design library from the atom level</span> in form of fonts, matching the UX’s library to the list of different font sizes and naming scheme in the software provided by developers’ team and from there, working my way up, updating the buttons (molecule), dialog sections (organism) and ending with template/page in the form of a sample UI frame with all the elements from the design system.</p>
-
-                        <p>In this process, I also ensure a transparent and clear communication channel between UX and development through having weekly meetings as well as updating them on the different changes in the new design standards</p>
+                        <p><span>I collaborated with our Senior UX Manager and a Staff UI Software Developer to start refactoring our UX design library from the atom level</span> in form of fonts, matching the UX’s library to the list of different font sizes and naming scheme in the software provided by developers’ team and from there, working my way up, updating the buttons (molecule), dialog sections (organism) and ending with template/page in the form of a sample UI frame with all the elements from the design system.</p>
                     </div>
                     <figure class="figure-analysis project-img static-img" >
                         <img alt="Meeting with Development" class="lazy js-off" src="img\kardium\Dev_100.webp"
@@ -163,7 +161,7 @@
                                         img\kardium\Dev_1080.webp 1080w" 
                                 sizes="(min-width: 74rem) 50vw, 100vw">
                         </noscript>
-                        <figcaption class="caption-analysis">Meeting with UI developers (credit profile illustration from irasutoya)</figcaption>
+                        <figcaption class="caption-analysis">Meeting with UI developers (illustration credit: @irasutoya)</figcaption>
                     </figure>   
                 </div>
                 
